2주차 전처리 주피터.ipynb

--- a/2주차/2주차 전처리 주피터.ipynb
+++ b/2주차/2주차 전처리 주피터.ipynb
@@ -34,7 +34,7 @@
     "#네이버 뉴스 정보 받아오기\n",
     "for date_int in range(start_data, end_data): #시작날부터 끝나는날까지 반복\n",
     "    date = str(date_int)\n",
-    "    url = \"https://news.naver.com/main/ranking/popularDay.nhn?date=\"\n",
+    "    url = \"https://news.naver.com/main/ranking/popularDay.nhn?date=\" + date\n",
     "    html = requests.get(url, headers=headers).text\n",
     "    soup = BS(html, 'html.parser')\n",
     "    ranking_total = soup.find_all(class_='rankingnews_box')\n",
